@@ -10,15 +10,15 @@ INSERT INTO organisation VALUES (2,0,2,1,2,2,1,2,0,'sainsburys','test','aasdfasd
 # Dumping data for table `permission`
 #
 
-INSERT INTO permission VALUES (1, 'blockmgr_add', '', 1);
-INSERT INTO permission VALUES (2, 'blockmgr_edit', '', 1);
-INSERT INTO permission VALUES (3, 'blockmgr_delete', '', 1);
-INSERT INTO permission VALUES (4, 'blockmgr_reorder', '', 1);
-INSERT INTO permission VALUES (5, 'blockmgr_list', '', 1);
-INSERT INTO permission VALUES (6, 'contactusmgr_send', '', 2);
-INSERT INTO permission VALUES (7, 'contactusmgr_list', '', 2);
-INSERT INTO permission VALUES (8, 'configmgr_edit', '', 3);
-INSERT INTO permission VALUES (9, 'configmgr_insert', '', 3);
+INSERT INTO permission VALUES (1, 'blockmgr_add', 'Permission to add new block', 1);
+INSERT INTO permission VALUES (2, 'blockmgr_edit', 'Permission to edit existing block', 1);
+INSERT INTO permission VALUES (3, 'blockmgr_delete', 'Permission to remove block', 1);
+INSERT INTO permission VALUES (4, 'blockmgr_reorder', 'Permission to reorder blocks', 1);
+INSERT INTO permission VALUES (5, 'blockmgr_list', 'Permission to view block listing', 1);
+INSERT INTO permission VALUES (6, 'contactusmgr_send', 'Permission to submit contact info', 2);
+INSERT INTO permission VALUES (7, 'contactusmgr_list', 'Permission to view Contact Us screen', 2);
+INSERT INTO permission VALUES (8, 'configmgr_edit', 'Permission to view and edit config settings', 3);
+INSERT INTO permission VALUES (9, 'configmgr_update', 'Permission to update config values', 3);
 INSERT INTO permission VALUES (10, 'defaultmgr_list', '', 3);
 INSERT INTO permission VALUES (11, 'defaultmgr_showNews', '', 3);
 INSERT INTO permission VALUES (12, 'modulemgr_add', '', 3);
@@ -194,7 +194,7 @@ INSERT INTO permission VALUES (217, 'modulemgr', '', 3);
 INSERT INTO permission VALUES (219, 'modulemgr_edit', '', 3);
 INSERT INTO permission VALUES (220, 'modulemgr_update', '', 3);
 INSERT INTO permission VALUES (221, 'contactusmgr', '', 2);
-INSERT INTO permission VALUES (223, 'blockmgr', '', 1);
+INSERT INTO permission VALUES (223, 'blockmgr', 'Permission to use block manager', 1);
 INSERT INTO permission VALUES (224, 'bugmgr', '', 3);
 
 #
