@@ -6,7 +6,7 @@
 <p class="alignCenter">{translate(#Please use the following form to edit your config file#)}.</p>
 
 <form name="conf" method="post" flexy:ignore>
-<input type="hidden" name="action" value="insert" />
+<input type="hidden" name="action" value="update" />
 <input type="hidden" name="conf[db][bootstrap]" value="0" />
 <table class="narrow">
     <tr>
